# smol-notebookLM

./: .gitignore  README.md  pyproject.toml  response.json
backend/: .gitignore  pyproject.toml  response.json
backend/src/app/: api.py  main.py
backend/src/app/api/: routes.py
backend/src/app/core/: config.py  constants.py
backend/src/app/llm/: prompts.py  router.py
backend/src/app/models/: models.py
backend/src/app/services/: services.py
backend/src/app/storage/texts/: MoA.json
backend/src/app/tts/: tts_bytes.py
backend/src/app/utils/: get_text.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: constants.tsx  layout.tsx  page.tsx  types.ts
frontend/src/app/components/: notepad.tsx  player.tsx  sources.tsx
src/app/: api.py
src/app/core/: config.py
src/app/llm/: router.py
src/app/models/: models.py
src/app/services/: services.py
src/app/tts/: tts_bytes.py
src/app/utils/: get_text.py
